--- a/menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html
+++ b/menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html
@@ -26,7 +26,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body class="cnt-home">
-  <header class="header-style-1">
+  <!-- <header class="header-style-1">
     <div class="main-header">
       <div class="container">
         <div class="row">
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
   <div class="body-content outer-top-xs">
     <div class='container'>
       <div class='row single-product'>
@@ -52,14 +52,34 @@
                       <div class="row">
                         <div class="col-xs-12 col-sm-12 col-lg-4">
                           <ul>
-                            <li><a href="detail-nasi-bebek-bumbu-hitam-d2n3b4.html">Nasi Bebek Bumbu Hitam</a></li>
-                            <li><a href="detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">Nasi Bebek Bumbu Kriuk</a></li>
-                            <li><a href="detail-bebek-bumbu-hitam-f8k5l1.html">Bebek Bumbu Hitam</a></li>
-                            <li><a href="detail-bebek-bumbu-kriuk-d7g4y0.html">Bebek Bumbu Kriuk</a></li>
-                            <li><a href="#">Nasi Pecel</a></li>
+                            <li><a href="#">1. Bebek Bumbu Madura (1 Ekor Bebek)</a></li>
+                            <li><a href="#">2. Bebek Kriuk (1 Ekor Bebek)</a></li>
+                            <li><a href="menu-makanan/detail-nasi-bebek-bumbu-hitam-d2n3b4.html">3. Nasi Bebek Bumbu Hitam</a></li>
+                            <li><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">4. Nasi Bebek Bumbu Kriuk</a></li>
+                            <li><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">5. Bebek Bumbu Hitam</a></li>
+                            <li><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">6. Bebek Bumbu Kriuk</a></li>
                           </ul>
                         </div>
-                        <div class="dropdown-banner-holder"> <a href="#"><img alt="" src="../assets/images/banners/banner-side.png" /></a> </div>
+                        <div class="col-xs-12 col-sm-12 col-lg-4">
+                          <ul>
+                            <li><a href="#">7. Nasi Pecel + Telur</a></li>
+                            <li><a href="#">8. Nasi Pecel + Ayam</a></li>
+                            <li><a href="#">9. Nasi Ayam Bumbu Madura/Kriuk</a></li>
+                            <li><a href="#">10. Nasi Soto Ayam/Tulang Sapi</a></li>
+                            <li><a href="#">11. Nasi Rawon</a></li>
+                            <li><a href="#">12. Nasi Gule</a></li>
+                          </ul>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-lg-4">
+                          <ul>
+                            <li><a href="#">13. Nasi Pecel + Telur</a></li>
+                            <li><a href="#">14. Nasi Pecel + Ayam</a></li>
+                            <li><a href="#">15. Nasi Ayam Bumbu Madura/Kriuk</a></li>
+                            <li><a href="#">16. Nasi Soto Ayam/Tulang Sapi</a></li>
+                            <li><a href="#">17. Nasi Rawon</a></li>
+                            <li><a href="#">18. Nasi Gule</a></li>
+                          </ul>
+                        </div>
                       </div>
                     </li>
                   </ul>
@@ -78,7 +98,7 @@
                             <li><a href="#">Lenovo</a></li>
                           </ul>
                         </div>
-                        <div class="dropdown-banner-holder"> <a href="#"><img alt="" src="../assets/images/banners/banner-side.png" /></a> </div>
+                        <div class="dropdown-banner-holder"> <a href="#"><img alt="" src="assets/images/banners/banner-side.png" /></a> </div>
                       </div>
                     </li>
                   </ul>
@@ -162,7 +182,7 @@
               </div>   			
               <div class='col-sm-12 col-md-8 col-lg-8 product-info-block'>
                 <div class="product-info">
-                  <h1 class="name">Bebek Bumbu Hitam</h1>
+                  <h1 class="mb-2 fs-20 fw-600">Bebek Bumbu Hitam</h1>
                   <div class="stock-container info-container m-t-10">
                     <div class="row">
                       <div class="col-lg-12">
@@ -186,7 +206,7 @@
                     <div class="row">
                       <div class="col-sm-6 col-xs-6">
                         <div class="price-box">
-                          <span class="price">Rp20,000</span>
+                          <span class="price">Rp 20,000</span>
                         </div>
                       </div>
                     </div>
