--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body class="cnt-home">
-<header class="header-style-1">
+<!-- <header class="header-style-1">
   <div class="main-header">
     <div class="container">
       <div class="row">
@@ -37,7 +37,7 @@
       </div>
     </div>
   </div>
-</header>
+</header> -->
 <div class="body-content outer-top-vs" id="top-banner-and-menu">
   <div class="container">
     <div class="row">
@@ -53,14 +53,34 @@
                     <div class="row">
                       <div class="col-xs-12 col-sm-12 col-lg-4">
                         <ul>
-                          <li><a href="menu-makanan/detail-nasi-bebek-bumbu-hitam-d2n3b4.html">Nasi Bebek Bumbu Hitam</a></li>
-                          <li><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">Nasi Bebek Bumbu Kriuk</a></li>
-                          <li><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">Bebek Bumbu Hitam</a></li>
-                          <li><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">Bebek Bumbu Kriuk</a></li>
-                          <li><a href="#">Nasi Pecel</a></li>
+                          <li><a href="#">1. Bebek Bumbu Madura (1 Ekor Bebek)</a></li>
+                          <li><a href="#">2. Bebek Kriuk (1 Ekor Bebek)</a></li>
+                          <li><a href="menu-makanan/detail-nasi-bebek-bumbu-hitam-d2n3b4.html">3. Nasi Bebek Bumbu Hitam</a></li>
+                          <li><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">4. Nasi Bebek Bumbu Kriuk</a></li>
+                          <li><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">5. Bebek Bumbu Hitam</a></li>
+                          <li><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">6. Bebek Bumbu Kriuk</a></li>
                         </ul>
                       </div>
-                      <div class="dropdown-banner-holder"> <a href="#"><img alt="" src="assets/images/banners/banner-side.png" /></a> </div>
+                      <div class="col-xs-12 col-sm-12 col-lg-4">
+                        <ul>
+                          <li><a href="#">7. Nasi Pecel + Telur</a></li>
+                          <li><a href="#">8. Nasi Pecel + Ayam</a></li>
+                          <li><a href="#">9. Nasi Ayam Bumbu Madura/Kriuk</a></li>
+                          <li><a href="#">10. Nasi Soto Ayam/Tulang Sapi</a></li>
+                          <li><a href="#">11. Nasi Rawon</a></li>
+                          <li><a href="#">12. Nasi Gule</a></li>
+                        </ul>
+                      </div>
+                      <div class="col-xs-12 col-sm-12 col-lg-4">
+                        <ul>
+                          <li><a href="#">13. Nasi Pecel + Telur</a></li>
+                          <li><a href="#">14. Nasi Pecel + Ayam</a></li>
+                          <li><a href="#">15. Nasi Ayam Bumbu Madura/Kriuk</a></li>
+                          <li><a href="#">16. Nasi Soto Ayam/Tulang Sapi</a></li>
+                          <li><a href="#">17. Nasi Rawon</a></li>
+                          <li><a href="#">18. Nasi Gule</a></li>
+                        </ul>
+                      </div>
                     </div>
                   </li>
                 </ul>
@@ -148,11 +168,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="menu-makanan/detail-nasi-bebek-bumbu-hitam-d2n3b4.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp24,000 </span>
+                      <span class="price" style="color: tomato;">Rp 24,000 </span>
                     </div>
                   </div>
                 </div>
@@ -172,11 +189,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="menu-makanan/detail-nasi-bebek-bumbu-kriuk-h8q6b9.html">Nasi Bebek Bumbu Kriuk</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp24,000 </span>
+                      <span class="price" style="color: tomato;">Rp 24,000 </span>
                     </div>
                   </div>
                 </div>
@@ -196,11 +210,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="menu-makanan/detail-bebek-bumbu-hitam-f8k5l1.html">Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -220,11 +231,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="menu-makanan/detail-bebek-bumbu-kriuk-d7g4y0.html">Bebek Bumbu Kriuk</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -244,11 +252,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -268,11 +273,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -298,11 +300,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -321,11 +320,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -344,11 +340,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -367,11 +360,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -390,11 +380,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
@@ -413,11 +400,8 @@
                   </div>
                   <div class="product-info text-left">
                     <h3 class="name"><a href="detail.html">Nasi Bebek Bumbu Hitam</a></h3>
-                    <div class="description">
-                      Ini deskripsi
-                    </div>
                     <div class="product-price">
-                      <span class="price"> Rp20,000 </span>
+                      <span class="price" style="color: tomato;">Rp 20,000 </span>
                     </div>
                   </div>
                 </div>
